; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/audio/resampler/extr_audio_resampler.c_resampler_append_plugs.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/audio/resampler/extr_audio_resampler.c_resampler_append_plugs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* (i32*, double, i32, i32)* }

@resampler_config = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, %struct.TYPE_3__**, i32, double)* @resampler_append_plugs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @resampler_append_plugs(i8** %0, %struct.TYPE_3__** %1, i32 %2, double %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca %struct.TYPE_3__**, align 8
  %8 = alloca i32, align 4
  %9 = alloca double, align 8
  %10 = alloca i32, align 4
  store i8** %0, i8*** %6, align 8
  store %struct.TYPE_3__** %1, %struct.TYPE_3__*** %7, align 8
  store i32 %2, i32* %8, align 4
  store double %3, double* %9, align 8
  %11 = call i32 (...) @cpu_features_get()
  store i32 %11, i32* %10, align 4
  %12 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %7, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = icmp ne %struct.TYPE_3__* %13, null
  br i1 %14, label %15, label %25

15:                                               ; preds = %4
  %16 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %7, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i8* (i32*, double, i32, i32)*, i8* (i32*, double, i32, i32)** %18, align 8
  %20 = load double, double* %9, align 8
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %10, align 4
  %23 = call i8* %19(i32* @resampler_config, double %20, i32 %21, i32 %22)
  %24 = load i8**, i8*** %6, align 8
  store i8* %23, i8** %24, align 8
  br label %25

25:                                               ; preds = %15, %4
  %26 = load i8**, i8*** %6, align 8
  %27 = load i8*, i8** %26, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %30, label %29

29:                                               ; preds = %25
  store i32 0, i32* %5, align 4
  br label %31

30:                                               ; preds = %25
  store i32 1, i32* %5, align 4
  br label %31

31:                                               ; preds = %30, %29
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @cpu_features_get(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
